--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
                 <div class="benefit-card animate-on-scroll">
                     <div class="benefit-icon"><i class="fas fa-gift"></i></div>
                     <h3>Sorteios Exclusivos</h3>
-                    <p>Chance de ganhar iPhone, notebook e mais prêmios</p>
+                    <p>Chance de ganhar notebook, fone bluetooth e mais prêmios</p>
                 </div>
             </div>
         </div>
